futures/testcrate/ui/bad-return-type.stderr
error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:13:19
   |
13 |     stream_yield!(val);
   |                   ^^^
   |                   |
   |                   expected enum `std::option::Option`, found integer
   |                   help: try using a variant of the expected type: `Some(val)`
   |
   = note: expected type `std::option::Option<_>`
              found type `{integer}`

error[E0698]: type inside generator must be known in this context
 --> $DIR/bad-return-type.rs:7:9
  |
7 |     let val = Some(42);
  |         ^^^
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/bad-return-type.rs:13:5
  |
13|     stream_yield!(val);
  |     ^^^^^^^^^^^^^^^^^^^
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:12:9
   |
12 |     let val = val.unwrap();
   |         ^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:13:5
   |
13 |     stream_yield!(val);
   |     ^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:13:19
   |
13 |     stream_yield!(val);
   |                   ^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:13:5
   |
13 |     stream_yield!(val);
   |     ^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:21:19
   |
21 |     stream_yield!((1, 2))
   |                   ^^^^^^ expected integer, found tuple
   |
   = note: expected type `{integer}`
              found type `({integer}, {integer})`

error[E0271]: type mismatch resolving `<impl futures_core::stream::Stream as futures_core::stream::Stream>::Item == (i32, i32)`
  --> $DIR/bad-return-type.rs:17:15
   |
17 | fn tuple() -> (i32, i32) {
   |               ^^^^^^^^^^ expected integer, found tuple
   |
   = note: expected type `{integer}`
              found type `(i32, i32)`
   = note: the return type of a function must have a statically known size

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:19:9
   |
19 |         stream_yield!(3);
   |         ^^^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:19:9
   |
19 |         stream_yield!(3);
   |         ^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:19:23
   |
19 |         stream_yield!(3);
   |                       ^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:19:9
   |
19 |         stream_yield!(3);
   |         ^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:19:9
   |
19 |         stream_yield!(3);
   |         ^^^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:19:9
   |
19 |         stream_yield!(3);
   |         ^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:21:20
   |
21 |     stream_yield!((1, 2))
   |                    ^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:21:23
   |
21 |     stream_yield!((1, 2))
   |                       ^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:21:19
   |
21 |     stream_yield!((1, 2))
   |                   ^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:21:5
   |
21 |     stream_yield!((1, 2))
   |     ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0698]: type inside generator must be known in this context
  --> $DIR/bad-return-type.rs:16:1
   |
16 | #[async_stream]
   | ^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/bad-return-type.rs:16:1
   |
16 | #[async_stream]
   | ^^^^^^^^^^^^^^^

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
